traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:8: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^Snake:17: warning: enclosing method fonctionTest has result type Unit: return value discarded
        return true
        ^Snake:22: error: value Nord is not a member of object plm.universe.Direction
  if(getDirection()==Direction.Nord){
                               ^Snake:26: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:26: warning: enclosing method fonctionTest has result type Unit: return value discarded
      return true
      ^Snake:30: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^Snake:30: warning: enclosing method fonctionTest has result type Unit: return value discarded
  return false
  ^